--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
                 <configuration>
                     <excludes>
                         <exclude>com/hydroblok/prototype/jacoco/exclude/*</exclude>
-                        <exclude>com/hydroblok/prototyp/*Application</exclude>
+                        <exclude>com/hydroblok/prototype/*Application</exclude>
                     </excludes>
                 </configuration>
                 <executions>
@@ -77,28 +77,6 @@
                         <goals>
                             <goal>report-integration</goal>
                         </goals>
-                    </execution>
-                    <execution>
-                        <id>default-check</id>
-                        <goals>
-                            <goal>check</goal>
-                        </goals>
-                        <configuration>
-                            <rules>
-                                <!-- implementation is needed only for Maven 2 -->
-                                <rule implementation="org.jacoco.maven.RuleConfiguration">
-                                    <element>BUNDLE</element>
-                                    <limits>
-                                        <!-- implementation is needed only for Maven 2 -->
-                                        <limit implementation="org.jacoco.report.check.Limit">
-                                            <counter>COMPLEXITY</counter>
-                                            <value>COVEREDRATIO</value>
-                                            <minimum>0.10</minimum>
-                                        </limit>
-                                    </limits>
-                                </rule>
-                            </rules>
-                        </configuration>
                     </execution>
                 </executions>
             </plugin>
